--- a/aoe2map/deployment.py.template
+++ b/aoe2map/deployment.py.template
@@ -5,6 +5,13 @@ SECRET_KEY = 'secret-key'
 # SECURITY WARNING: don't run with debug turned on in production!
 DEBUG = True
 
+EMAIL_BACKEND = 'django.core.mail.backends.console.EmailBackend'
+#EMAIL_HOST = 'smtp.example.org'
+#EMAIL_PORT = 587
+#EMAIL_HOST_USER = 'user'
+#EMAIL_HOST_PASSWORD = 'password'
+#EMAIL_USE_TLS = True
+
 STATIC_ROOT = 'mapsapp/static'
 MEDIA_ROOT = 'media'
 #SECURE_SSL_REDIRECT = True
