--- a/aoe2map/deployment.py.template
+++ b/aoe2map/deployment.py.template
@@ -1,3 +1,4 @@
+DJANGO_TOP_URL = 'https://aoe2map.net'
 
 # SECURITY WARNING: keep the secret key used in production secret!
 SECRET_KEY = 'secret-key'
