--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,22 @@
-adal==1.2.6
+adal==1.2.7
 appdirs==1.4.4
-asgiref==3.3.1
+asgiref==3.3.4
 asn1crypto==1.4.0
-azure-common==1.1.26
-azure-core==1.12.0
 azure-storage-blob==2.1.0
+azure-common==1.1.27
+azure-core==1.15.0
 azure-storage-common==2.1.0
 CacheControl==0.12.6
-certifi==2020.12.5
+certifi==2021.5.30
 cffi==1.14.5
 chardet==4.0.0
-click==7.1.2
+click==8.0.1
 colorama==0.4.4
-contextlib2==0.6.0
-cryptography==3.4.6
-distlib==0.3.1
+contextlib2==0.6.0.post1
+cryptography==3.4.7
+distlib==0.3.2
 distro==1.5.0
-Django==3.1.7
+Django==3.2.4
 django-storages==1.11.1
 django-widget-tweaks==1.4.8
 html5lib==1.1
@@ -27,14 +27,13 @@ lockfile==0.12.2
 msgpack==1.0.2
 msrest==0.6.21
 msrestazure==0.6.4
-oauthlib==3.1.0
+oauthlib==3.1.1
 packaging==20.9
 pep517==0.10.0
-Pillow==8.1.2
+Pillow==8.2.0
 progress==1.5
-pur==5.4.0
 pycparser==2.20
-PyJWT==2.0.1
+PyJWT==2.1.0
 pyparsing==2.4.7
 python-dateutil==2.8.1
 pytoml==0.1.21
@@ -42,8 +41,8 @@ pytz==2021.1
 requests==2.25.1
 requests-oauthlib==1.3.0
 retrying==1.3.3
-six==1.15.0
+six==1.16.0
 sqlparse==0.4.1
-urllib3==1.26.4
+urllib3==1.26.5
 uuid==1.30
 webencodings==0.5.1
