--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,23 @@
 adal==1.2.7
 appdirs==1.4.4
-asgiref==3.3.4
+asgiref==3.4.1
 asn1crypto==1.4.0
-azure-storage-blob==2.1.0
 azure-common==1.1.27
 azure-core==1.15.0
+azure-storage-blob==2.1.0
 azure-storage-common==2.1.0
 CacheControl==0.12.6
 certifi==2021.5.30
 cffi==1.14.5
 chardet==4.0.0
+charset-normalizer==2.0.5
 click==8.0.1
 colorama==0.4.4
 contextlib2==0.6.0.post1
-cryptography==3.4.7
+cryptography==3.4.8
 distlib==0.3.2
 distro==1.5.0
-Django==3.2.4
+Django==3.2.7
 django-storages==1.11.1
 django-widget-tweaks==1.4.8
 html5lib==1.1
@@ -30,7 +31,7 @@ msrestazure==0.6.4
 oauthlib==3.1.1
 packaging==20.9
 pep517==0.10.0
-Pillow==8.2.0
+Pillow==8.3.2
 progress==1.5
 pycparser==2.20
 PyJWT==2.1.0
@@ -38,11 +39,12 @@ pyparsing==2.4.7
 python-dateutil==2.8.1
 pytoml==0.1.21
 pytz==2021.1
-requests==2.25.1
+requests==2.26.0
 requests-oauthlib==1.3.0
 retrying==1.3.3
 six==1.16.0
-sqlparse==0.4.1
-urllib3==1.26.5
+sqlparse==0.4.2
+toml==0.10.2
+urllib3==1.26.6
 uuid==1.30
 webencodings==0.5.1
