--- a/requirements.txt
+++ b/requirements.txt
@@ -1,50 +1,50 @@
 adal==1.2.7
 appdirs==1.4.4
-asgiref==3.4.1
+asgiref==3.5.0
 asn1crypto==1.4.0
-azure-common==1.1.27
-azure-core==1.15.0
-azure-storage-blob==2.1.0
+azure-common==1.1.28
+azure-core==1.22.1
+azure-storage-blob==12.9.0
 azure-storage-common==2.1.0
-CacheControl==0.12.6
-certifi==2021.5.30
-cffi==1.14.5
+CacheControl==0.12.10
+certifi==2021.10.8
+cffi==1.15.0
 chardet==4.0.0
-charset-normalizer==2.0.5
-click==8.0.1
+charset-normalizer==2.0.12
+click==8.0.3
 colorama==0.4.4
-contextlib2==0.6.0.post1
-cryptography==3.4.8
-distlib==0.3.2
-distro==1.5.0
-Django==4.0.1
-django-storages==1.11.1
-django-widget-tweaks==1.4.8
+contextlib2==21.6.0
+cryptography==36.0.1
+distlib==0.3.4
+distro==1.6.0
+Django==4.0.2
+django-storages==1.12.3
+django-widget-tweaks==1.4.12
 html5lib==1.1
-idna==2.10
+idna==3.3
 ipaddr==2.2.0
-isodate==0.6.0
+isodate==0.6.1
 lockfile==0.12.2
-msgpack==1.0.2
+msgpack==1.0.3
 msrest==0.6.21
 msrestazure==0.6.4
-oauthlib==3.1.1
-packaging==20.9
-pep517==0.10.0
-Pillow==8.3.2
-progress==1.5
-pycparser==2.20
-PyJWT==2.1.0
-pyparsing==2.4.7
-python-dateutil==2.8.1
+oauthlib==3.2.0
+packaging==21.3
+pep517==0.12.0
+Pillow==9.0.1
+progress==1.6
+pycparser==2.21
+PyJWT==2.3.0
+pyparsing==3.0.7
+python-dateutil==2.8.2
 pytoml==0.1.21
-pytz==2021.1
-requests==2.26.0
-requests-oauthlib==1.3.0
+pytz==2021.3
+requests==2.27.1
+requests-oauthlib==1.3.1
 retrying==1.3.3
 six==1.16.0
 sqlparse==0.4.2
 toml==0.10.2
-urllib3==1.26.6
+urllib3==1.26.8
 uuid==1.30
 webencodings==0.5.1
