--- a/requirements.txt
+++ b/requirements.txt
@@ -1,50 +1,52 @@
 adal==1.2.7
 appdirs==1.4.4
-asgiref==3.5.0
-asn1crypto==1.4.0
+asgiref==3.5.2
+asn1crypto==1.5.1
 azure-common==1.1.28
-azure-core==1.22.1
-azure-storage-blob==12.9.0
+azure-core==1.26.0
+azure-storage-blob==12.13.1
 azure-storage-common==2.1.0
-CacheControl==0.12.10
-certifi==2021.10.8
-cffi==1.15.0
-chardet==4.0.0
+CacheControl==0.12.11
+certifi==2022.9.24
+cffi==1.15.1
+chardet==5.0.0
 charset-normalizer==2.0.12
-click==8.0.3
-colorama==0.4.4
+click==8.1.3
+colorama==0.4.5
 contextlib2==21.6.0
-cryptography==36.0.1
-distlib==0.3.4
-distro==1.6.0
-Django==4.0.4
-django-storages==1.12.3
+cryptography==38.0.1
+distlib==0.3.6
+distro==1.7.0
+Django==4.1.2
+django-storages==1.13.1
 django-widget-tweaks==1.4.12
 html5lib==1.1
-idna==3.3
+idna==3.4
 ipaddr==2.2.0
 isodate==0.6.1
 lockfile==0.12.2
-msgpack==1.0.3
-msrest==0.6.21
+msgpack==1.0.4
+msrest==0.7.1
 msrestazure==0.6.4
-oauthlib==3.2.0
+oauthlib==3.2.1
 packaging==21.3
-pep517==0.12.0
-Pillow==9.0.1
+pep517==0.13.0
+Pillow==9.2.0
 progress==1.6
 pycparser==2.21
-PyJWT==2.3.0
-pyparsing==3.0.7
+PyJWT==2.5.0
+pyparsing==3.0.9
 python-dateutil==2.8.2
 pytoml==0.1.21
-pytz==2021.3
-requests==2.27.1
+pytz==2022.4
+requests==2.28.1
 requests-oauthlib==1.3.1
 retrying==1.3.3
 six==1.16.0
-sqlparse==0.4.2
+sqlparse==0.4.3
 toml==0.10.2
-urllib3==1.26.8
+tomli==2.0.1
+typing_extensions==4.4.0
+urllib3==1.26.12
 uuid==1.30
 webencodings==0.5.1
